region-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: region-service
  namespace: northwind
  labels:
    app: region-service
spec:
  selector:
    matchLabels:
      app: region-service
  template:
    metadata:
      labels:
        app: region-service
    spec:
      containers:
      - name: region-service-container
        image: christiancavuti/region-service:0.1.0
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
        ports:
        - containerPort: 8000
