region-service/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: region-service
  namesace: northwind
  labels:
      name: region-service
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/region-service"
        backend:
          service:
            name: region-service
            port:
              number: 8000
